# python-rs-driver

./: Makefile  README.md  pyproject.toml  zpp-demo.ipynb
.github/workflows/: CI.yml
.ipynb_checkpoints/: zpp-demo-checkpoint.ipynb
examples/: zpp_demo.py
python/scylla/: __init__.py
python/scylla/_rust/: session.pyi
python/scylla_python_serialization/: session.py
python/scylla_python_serialization/serialize/: serialize.py
python/tests/: test_basic.py  test_imports.py  test_use_keyspace.py
scripts/: pre-commit.sh
src/: errors.rs  lib.rs  session.rs  session_builder.rs
src/cluster/: state.rs
src/tests/: cache_tests.rs
